Adjusted overflow for landing h2, fixed portfolio spelling error

--- a/css/style1_landing.css
+++ b/css/style1_landing.css
@@ -145,6 +145,8 @@ a.navbar-button:hover {
   margin: 0;
   color: #bfbcbf;
   font-weight: normal;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .information-container {
